--- a/LearnHtml5/audio-1.html
+++ b/LearnHtml5/audio-1.html
@@ -39,7 +39,7 @@
 			
 			<div>
 				<audio controls="controls" autoplay="autoplay" preload="preload" ononwaiting="onstop()">
-					<source id="music" src="source/同桌的你.mp3" type="audio/mp3">
+					<source id="music" src="../source/同桌的你.mp3" type="audio/mp3">
 					Your browser does not support the audio element.
 				</audio>
 			</div>
