--- a/HtmlExample/css.html
+++ b/HtmlExample/css.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>无标题文档</title>
-<script src="jquery-1.8.2.min.js" type="text/javascript"></script>
+<script src="../jquery-1.8.2.min.js" type="text/javascript"></script>
 <script type="text/javascript">
 /*
 
