--- a/LearnHtml5/gewara/gewara.html
+++ b/LearnHtml5/gewara/gewara.html
@@ -7,7 +7,7 @@
 
 <script type="text/javascript">
     window.click_showCapt_time = 15 * 60 * 1000;
-    window.click_closeBox_time = 10 * 1000;
+    window.click_closeBox_time = 15 * 1000;
     window.clearMyTimes = function () {
         window.clearTimeout(window.showCapt_time);
         window.clearTimeout(window.closeBox_time);
@@ -29,20 +29,32 @@
         }
     };
     window.click_showCapt = function () {
-        showCapt();
-        console.log("click show capt.");
-        window.showCapt_time = window.setTimeout(window.click_closeBox, window.click_closeBox_time);
+        try {
+            showCapt();
+            console.log("click show capt.");
+            window.showCapt_time = window.setTimeout(window.click_closeBox, window.click_closeBox_time);
+        } catch (e) {
+            console.error(e);
+            window.clearMyTimes();
+        }
+
     };
     window.click_closeBox = function () {
-        var result = document.getElementById("giftT").innerHTML;
-        console.log("result = " + result);
-        closeBox();
-        console.log("click close box.");
-        window.closeBox_time = window.setTimeout(window.click_showCapt, window.click_showCapt_time);
+        try {
+            var result = document.getElementById("giftT").innerHTML;
+            console.log("result = " + result);
+            closeBox();
+            console.log("click close box.");
+            window.closeBox_time = window.setTimeout(window.click_showCapt, window.click_showCapt_time);
+        } catch (e) {
+            console.error(e);
+            window.clearMyTimes();
+        }
     };
-    console.log("start auto click...");
-    window.click_showCapt();
-    console.log("started.");
+    window.setTimeout(function () {
+        window.click_showCapt();
+    }, 3000);
+    window.printInfo();
 
     //clear
     window.clearMyTimes();
