--- a/LearnJQuery/event/index.html
+++ b/LearnJQuery/event/index.html
@@ -7,12 +7,14 @@
     <script type="text/javascript">
         (function ($) {
             $().ready(function () {
-
+                $("#test").click(function(){
+                    //here
+                });
             });
         })(jQuery);
     </script>
 </head>
 <body>
-
+<div id="test">test</div>
 </body>
 </html>
