--- a/LearnJQuery/plugin/button.html
+++ b/LearnJQuery/plugin/button.html
@@ -4,15 +4,16 @@
     <meta charset="utf-8">
     <title></title>
     <script type="text/javascript" src="../../jquery-1.8.2.min.js"></script>
+    <script type="text/javascript" src="button.js"></script>
     <script type="text/javascript">
         (function ($) {
             $().ready(function () {
-
+                $("span").myButton();
             });
         })(jQuery);
     </script>
 </head>
 <body>
-
+<span>Button</span>
 </body>
 </html>
