--- a/LearnJQuery/dialog/index-custom.html
+++ b/LearnJQuery/dialog/index-custom.html
@@ -6,10 +6,12 @@
     <title>jQuery UI Dialog - Basic modal</title>
     <script type="text/javascript" src="../../jquery-1.8.2.min.js"></script>
     <script type="text/javascript" src="../../jquery-ui-1.9.1.custom.min.js"></script>
+
+
     <link rel="stylesheet" type="text/css" href="css/jquery.ui.core.css"/>
     <link rel="stylesheet" type="text/css" href="css/jquery.ui.dialog.css"/>
     <!--default theme-->
-    <!--<link rel="stylesheet" type="text/css" href="css/jquery.ui.theme.css"/>-->
+    <link rel="stylesheet" type="text/css" href="css/jquery.ui.theme.css"/>
     <script>
         $(function () {
             $("#dialog-modal").dialog({
@@ -18,10 +20,16 @@
                 modal: true,
                 resizable: false
             });
+            $("input[type=submit], a, button").button();
         });
     </script>
 </head>
 <body>
+<button>A button element</button>
+
+<input type="submit" value="A submit button" />
+
+<a href="#">An anchor</a>
 <div id="themeSection"></div>
 
 <div id="dialog-modal" title="Basic modal dialog">
