--- a/LearnJQuery/each/index-add-option.html
+++ b/LearnJQuery/each/index-add-option.html
@@ -5,15 +5,21 @@
     <title>each</title>
     <script type="text/javascript" src="../../jquery-1.8.2.min.js"></script>
     <script type="text/javascript">
-        var data = ["aaaaaaa", "bbbbbbb", "ccccccccc"];
+        var data = [
+            {key: "1", value: "flower"},
+            {key: "2", value: "car"},
+            {key: "3", value: "auto car"}
+        ];
         (function ($) {
             $().ready(function () {
-                $("#list p").each(function (i) {
-                    $(this).html($(this).html() + i);
-                    $(this).click(function () {
-                        $(this).remove();
-                    });
-                });
+                for (var i = 0; i < data.length; i++) {
+                    var _k = data[i].key;
+                    var _v = data[i].value;
+                    var item = $("<p></p>").html(_v).click(function () {
+                        alert("key = " + $(this).data("key"));
+                    }).data("key", _k);
+                    $("#list").append(item);
+                }
             });
         })(jQuery);
     </script>
@@ -32,20 +38,6 @@
     </style>
 </head>
 <body>
-<div id="list">
-    <p>aaaaaaaa</p>
-
-    <p>aaaaaaaa</p>
-
-    <p>aaaaaaaa</p>
-
-    <p>aaaaaaaa</p>
-
-    <p>aaaaaaaa</p>
-
-    <p>aaaaaaaa</p>
-
-    <p>aaaaaaaa</p>
-</div>
+<div id="list"></div>
 </body>
 </html>
