--- a/LearnJQuery/find.html
+++ b/LearnJQuery/find.html
@@ -1,9 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>find</title>
+    <script type="text/javascript" src="../jquery-1.8.2.min.js"></script>
+    <script type="text/javascript">
+        (function ($) {
+            $().ready(function(){
+                var sum = (function (x, y) {
+                    return x + y;
+                })(12, 15);
+                console.log(sum);
+
+                function addEvent(index) {
+                    $("#item-" + index).click(function (event) {
+                        alert($(this).html());
+                        console.log(index);
+                    });
+                }
+                for (var i = 1; i < 5; i++) {
+                    addEvent(i);
+                }
+
+                alert($("li[id^='item']").length);
+                alert($(".item").length);
+            });
+        })(jQuery);
+    </script>
 </head>
 <body>
-
+<button id="create">create</button>
+<ul>
+    <li id="item-1">A</li>
+    <li id="item-2">B</li>
+    <li id="item-3">C</li>
+    <li id="item-4">D</li>
+    <li class="item">E</li>
+    <li class="item">E</li>
+    <li class="item">E</li>
+    <li class="item">E</li>
+    <li class="item">E</li>
+    <li class="item">E</li>
+</ul>
 </body>
 </html>
