--- a/LearnJQuery/param/index.html
+++ b/LearnJQuery/param/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
     <title></title>
+    <script type="text/javascript" src="../../jquery-1.8.2.min.js"></script>
+    <script type="text/javascript">
+        (function ($) {
+            $().ready(function () {
+                alert($.param());
+            });
+        })(jQuery);
+    </script>
 </head>
 <body>
 
