--- a/LearnJQuery/serialize/index.html
+++ b/LearnJQuery/serialize/index.html
@@ -1,9 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>serialize</title>
 </head>
 <body>
+<p id="results"><b>Results: </b></p>
 
+<form>
+    <select name="single">
+        <option>Single</option>
+        <option>Single2</option>
+    </select>
+    <select name="multiple" multiple="multiple">
+        <option selected="selected">Multiple</option>
+        <option>Multiple2</option>
+        <option selected="selected">Multiple3</option>
+    </select><br/>
+    <input type="checkbox" name="check" value="check1"/> check1
+    <input type="checkbox" name="check" value="check2" checked="checked"/> check2
+    <input type="radio" name="radio" value="radio1" checked="checked"/> radio1
+    <input type="radio" name="radio" value="radio2"/> radio2
+</form>
+
+<a href="#" id="btn">serialize</a>
+
+
+<script type="text/javascript" src="../../jquery-1.8.2.min.js">
+    (function ($) {
+        $().ready(function () {
+            $("#btn").click(function () {
+                $("#results").append("<div>" + $("form").serialize() + "</div>");
+            });
+        });
+    })(jQuery);
+</script>
 </body>
 </html>
