--- a/LearnJQuery/template.html
+++ b/LearnJQuery/template.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8">
     <title></title>
     <script type="text/javascript" src="../../jquery-1.8.2.min.js"></script>
+    <script type="text/javascript">
+        (function ($) {
+            $().ready(function () {
+
+            });
+        })(jQuery);
+    </script>
 </head>
 <body>
 
