--- a/hibu/keyCode/keycode.html
+++ b/hibu/keyCode/keycode.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>key code</title>
+    <script type="text/javascript" src="../../jquery-1.8.2.min.js"></script>
+    <script type="text/javascript" src="KeyCodeTool.js"></script>
 </head>
 <body>
+<button id="showBtn">show json key code</button>
+<div id="keyCodeContent"></div>
+
 
 </body>
 </html>
